random scrollbar fixed

--- a/src/kanbas-new/styles.css
+++ b/src/kanbas-new/styles.css
@@ -22,7 +22,6 @@ a {
 }
 
 .wd-header {
-	overflow-y: scroll;
     margin: 25px;
 	height: 65px;
     width: 100%;
